--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "http-status": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "restify-client": "^1.0.5",
+    "restify-clients": "^2.6.4",
     "sequelize": "^4.42.1"
   }
 }
